--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="og:image" content="./img/capture.PNG" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>App -  Pirmansyah</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   </head>
   <body style="display: flex; justify-content: center; flex-direction: column; min-height: 100vh;">
     <div class="container">
@@ -64,6 +65,9 @@
                           </li>
                       </ol>
                 </div>
+                <div class="mt-5 text-center">
+                  <a target="_blank" class="link-dark" href="https://github.com/pirmanshah/counting_words_letters"><i class="fab fa-github"></i> view code</a>
+              </div>
             </div>
         </div>
     </div>
