--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>App -  Pirmansyah</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   </head>
-  <body style="display: flex; justify-content: center; flex-direction: column; min-height: 100vh;">
-    <div class="container">
+  <body style="display: flex; justify-content: center; flex-direction: column;">
+    <div class="container my-5">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-10 co-12">
                 <div class="mb-4 text-center">
